--- a/GuacUnderMaintenance/master.css
+++ b/GuacUnderMaintenance/master.css
@@ -6,14 +6,18 @@
 body {
     text-align: center;
     margin: auto;
+    background-color: #141928;
 }
 
 body > img {
+    margin-top: 20vh;
     height: 100px;
 }
 
 body > p {
+    width: 300px;
     padding: 20px;
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    line-height: 1.6rem;
 }
