--- a/GuacUnderMaintenance/master.css
+++ b/GuacUnderMaintenance/master.css
@@ -4,6 +4,8 @@
 }
 
 body {
+    display: flex;
+    justify-content: center;
     text-align: center;
     margin: auto;
     background-color: #141928;
@@ -15,9 +17,10 @@ body > img {
 }
 
 body > p {
-    width: 300px;
-    padding: 20px;
     text-align: center;
+    width: 500px;
+    padding: 20px;
+    color: white;
     font-size: 17px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     line-height: 1.6rem;
