--- a/GuacUnderMaintenance/master.css
+++ b/GuacUnderMaintenance/master.css
@@ -16,6 +16,16 @@ body > img {
     height: 100px;
 }
 
+body > h2 {
+    text-align: center;
+    width: 500px;
+    padding: 20px;
+    color: white;
+    font-size: 25px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    line-height: 1.6rem;
+}
+
 body > p {
     text-align: center;
     width: 500px;
