--- a/GuacUnderMaintenance/master.css
+++ b/GuacUnderMaintenance/master.css
@@ -6,6 +6,7 @@
 body {
     display: flex;
     justify-content: center;
+    flex-direction: column;
     text-align: center;
     margin: auto;
     background-color: #141928;
