--- a/GuacUnderMaintenance/master.css
+++ b/GuacUnderMaintenance/master.css
@@ -14,6 +14,7 @@ div {
 }
 
 img {
+    text-align: center;
     height: 100px;
 }
 
@@ -22,7 +23,7 @@ h2 {
     width: 500px;
     padding: 20px;
     color: white;
-    font-size: 25px;
+    font-size: 30px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     line-height: 1.6rem;
 }
