--- a/GuacUnderMaintenance/master.css
+++ b/GuacUnderMaintenance/master.css
@@ -8,20 +8,21 @@ body {
 }
 
 div {
-    width: 500px;
+    width: 600px;
     margin: auto;
     margin-top: 20vh;
 }
 
 img {
     text-align: center;
-    height: 100px;
+    margin: auto;
+    height: 200px;
 }
 
 h2 {
     text-align: center;
     width: 500px;
-    padding: 20px;
+    padding: 10px;
     color: white;
     font-size: 30px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -30,10 +31,9 @@ h2 {
 
 p {
     text-align: center;
-    width: 500px;
-    padding: 20px;
+    padding: 10px;
     color: white;
     font-size: 17px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    line-height: 1.6rem;
+    line-height: 1.4rem;
 }
