--- a/GuacUnderMaintenance/master.css
+++ b/GuacUnderMaintenance/master.css
@@ -14,8 +14,10 @@ div {
 }
 
 img {
+    display: block;
     margin: auto;
-    height: 200px;
+    height: 150px;
+    padding: 30px;
 }
 
 h2 {
@@ -32,5 +34,5 @@ p {
     color: white;
     font-size: 17px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    line-height: 1.4rem;
+    line-height: 1.6rem;
 }
