--- a/Mimic/style.css
+++ b/Mimic/style.css
@@ -107,16 +107,16 @@ a:visited{
 }
 
 
-#receiver-id {
+#share-link {
     cursor: pointer;
     font-weight: bold; 
     color: rgb(219, 33, 8);
 }
 
-#receiver-id:hover {
+#share-link:hover {
     color: rgb(182, 26, 5);
 }
 
-#receiver-id:active {
+#share-link:active {
     color: rgb(129, 15, 0);
 }
