--- a/Mimic/mimic.css
+++ b/Mimic/mimic.css
@@ -11,3 +11,8 @@ body {
     padding: 20px;
     background-color: rgb(70, 31, 163);
 }
+
+.game-title {
+    color: white;
+    text-align: center;
+}
