--- a/Mimic/mimic.css
+++ b/Mimic/mimic.css
@@ -10,6 +10,7 @@ body {
     transform: translate(-50%, -50%);
     padding: 20px;
     background-color: rgb(70, 31, 163);
+    width: 400px;
 }
 
 .game-title {
