--- a/Mimic/mimic.css
+++ b/Mimic/mimic.css
@@ -9,13 +9,15 @@ body {
     top: 50%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    padding: 80px 20px;
+    padding: 0 20px;
     border-radius: 12px;
     background-color: rgb(70, 31, 163);
     width: 350px;
+    text-align: center;
 }
 
 .game-title {
+    padding: 40px 0;
     color: white;
     text-align: center;
 }
