--- a/Mimic/mimic.css
+++ b/Mimic/mimic.css
@@ -9,7 +9,7 @@ body {
     top: 50%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    padding: 0 20px;
+    padding: 40px 20px;
     border-radius: 12px;
     background-color: rgb(70, 31, 163);
     width: 350px;
@@ -17,7 +17,7 @@ body {
 }
 
 .game-title {
-    padding: 40px 0;
+    padding: 0 0 40px 0;
     color: white;
     text-align: center;
 }
