--- a/Mimic/style.css
+++ b/Mimic/style.css
@@ -1,7 +1,3 @@
-body {
-    font-family: 'DejaVu Sans', Arial, Helvetica, sans-serif;
-}
-
 h1 {
     font-size: 1.75em;
 }
@@ -123,6 +119,16 @@ a:visited{
 body {
     background-color: rgb(35, 0, 117);
     color: rgb(240, 240, 240);
+    height: 100%;
+}
+
+header {
+    background-color: #0C0032;
+}
+
+.top-container {
+    max-width: 400px;
+    margin: 0 auto;
 }
 
 .Main {
@@ -141,5 +147,6 @@ body {
 .game-title {
     padding: 0 0 40px 0;
     color: white;
+    font-size: 1rem;
     text-align: center;
 }
