--- a/Mimic/style.css
+++ b/Mimic/style.css
@@ -200,9 +200,10 @@ footer {
 
 .message {
     overflow-y: auto;
-    height: 100%;
     padding: 0 10px;
     margin-bottom: 35px;
+    position: absolute;
+    bottom: 0;
 }
 
 .send-message-container {
