--- a/Mimic/style.css
+++ b/Mimic/style.css
@@ -204,6 +204,7 @@ footer {
     margin-bottom: 35px;
     position: absolute;
     bottom: 0;
+    max-height: 100%;
 }
 
 .send-message-container {
