--- a/Mimic/style.css
+++ b/Mimic/style.css
@@ -199,7 +199,7 @@ footer {
 }
 
 .message {
-    height: calc(100% - 40px);
+    max-height: calc(100% - 40px);
     overflow-y: auto;
     padding: 0 10px;
     margin-bottom: 40px;
