--- a/Mimic/style.css
+++ b/Mimic/style.css
@@ -200,6 +200,7 @@ footer {
 
 .message {
     max-height: calc(100% - 40px);
+    width: 100%;
     overflow-y: auto;
     padding: 0 10px;
     margin-bottom: 40px;
