--- a/Mimic/style.css
+++ b/Mimic/style.css
@@ -140,6 +140,7 @@ header {
     display: flex;
     justify-content: space-between;
     vertical-align: middle;
+    text-align: left;
 }
 
 .player-name-text {
