--- a/Mimic/style.css
+++ b/Mimic/style.css
@@ -36,6 +36,10 @@ h3 {
     visibility: hidden;
 }
 
+.no-display {
+    display: none;
+}
+
 /* width */
 ::-webkit-scrollbar {
     width: 5px;
@@ -246,6 +250,7 @@ footer {
     position: absolute;
     right: 0;
     top: 0;
+    z-index: 10;
     padding: 10px 28px;
     border: none;
     border-radius:  0 8px 0 0;
