--- a/Mimic/style.css
+++ b/Mimic/style.css
@@ -248,10 +248,10 @@ footer {
     background-color: #4a3c72;
     color: rgb(153, 153, 153);
     position: absolute;
-    right: 0;
+    right: 5px;
     top: 0;
     z-index: 10;
-    padding: 10px 28px;
+    padding: 10px 25.5px;
     border: none;
     border-radius:  0 8px 0 0;
     outline: none;
