--- a/Mimic/style.css
+++ b/Mimic/style.css
@@ -253,7 +253,7 @@ footer {
 
 .send-message-container > input {
     width: 450px;
-    padding: 5px;
+    padding: 5px 50px 5px 5px;
     background-color: #514670;
     color:rgb(211, 211, 211);
     border: none;
