--- a/Mimic/style.css
+++ b/Mimic/style.css
@@ -286,3 +286,12 @@ footer {
     outline: none;
     cursor: pointer;
 }
+
+/* Games Slides */
+.word-top-container {
+    border-radius: 8px 8px 0 0;
+    text-align: center;
+    padding: 25px;
+    height: 110px;
+    background-color: #2a1764;
+}
