--- a/Mimic/style.css
+++ b/Mimic/style.css
@@ -288,6 +288,11 @@ footer {
 }
 
 /* Games Slides */
+#your-word-slide {
+    visibility: hidden;
+    position: absolute;
+}
+
 .word-top-container {
     border-radius: 8px 8px 0 0;
     text-align: center;
