--- a/CaptionIt/style.css
+++ b/CaptionIt/style.css
@@ -11,7 +11,7 @@ html {
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #e7e7e7;
+    background-color: rgb(0, 0, 0);
 }
 
 /* Status and Link Section */
@@ -21,7 +21,7 @@ header {
     left: 0;
     right: 0;
     width: 100%;
-    background-color: #333;
+    background-color: #eb8d4f;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -209,19 +209,51 @@ h3 {
     right: 20px;
     bottom: 20px;
     width: 300px;
-    height: 400px;
-    background-color: #f0f0f0;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+    height: calc(92% - 100px);
     display: flex;
     flex-direction: column;
     z-index: 5;
+}
+
+.uncollapsed-arrow {
+    position: absolute;
+    left: 10px;
+    top: 5px;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.collapsed-arrow {
+    position: absolute;
+    left: 50%;
+    top: 99%;
+    transform: translateX(-50%);
+    background-color: #d3d3d3;
+    border-radius: 8px;
+    width: 300px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.chat-container.collapsed .chat-table {
+    display: none;
 }
 
 .chat-table {
     display: flex;
     flex-direction: column;
     height: 100%;
+    background-color: #e6e6e6;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.041);
 }
 
 #clearMsgsButton {
