--- a/CaptionIt/style.css
+++ b/CaptionIt/style.css
@@ -113,7 +113,7 @@ h3 {
 }
 
 .not-ready {
-    color: rgb(161, 3, 3);
+    color: #E05D5D;
 }
 
 .showName-container,
@@ -131,7 +131,6 @@ h3 {
 .player-name-text {
     padding-top: 3px;
     font-size: 1.2rem;
-    color: #1f1f1f;
     margin-right: 0.5rem;
     margin-bottom: 0;
 }
