--- a/CaptionIt/style.css
+++ b/CaptionIt/style.css
@@ -62,6 +62,46 @@ header {
 }
 
 /* Game Section */
+.score-section {
+    position: fixed;
+    bottom: 40px;
+    left: 20px;
+    padding: 1rem;
+    background-color: #f7ebcc;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    z-index: 1;
+    min-width: 300px;
+}
+
+.score-list {
+    max-height: 50vh;
+    /* Adjust the maximum height according to your preference */
+    overflow-y: auto;
+}
+
+.score-player-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+}
+
+/* Mobile view */
+@media (max-width: 768px) {
+    .score-section {
+        display: none;
+    }
+}
+
+/* Desktop view */
+@media (min-width: 769px) {
+    .score-section {
+        width: auto;
+        bottom: 1rem;
+    }
+}
+
 .Main {
     position: absolute;
     top: 0;
@@ -179,10 +219,6 @@ h3 {
     color: rgb(161, 3, 3);
 }
 
-.no-display {
-    display: none;
-}
-
 .regular-button {
     font-size: 1.2rem;
     color: #ffffff;
@@ -204,6 +240,156 @@ h3 {
     .slide {
         margin: 2rem;
     }
+}
+
+/* Writing Captions Slide */
+#captionSlide {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 70vh;
+    /* Adjust this value according to your preference */
+    padding: 1rem;
+}
+
+.random-picture {
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+    margin-bottom: 1rem;
+}
+
+/* Mobile view */
+@media (max-width: 768px) {
+    #caption-random-pic {
+        max-height: 40vh;
+        /* Adjust this value according to your preference */
+    }
+}
+
+/* Desktop view */
+@media (min-width: 769px) {
+    #caption-random-pic {
+        max-height: 60vh;
+        max-width: 500px;
+        /* Adjust this value according to your preference */
+    }
+}
+
+#caption-input {
+    border: none;
+    background-color: #f3ebd8;
+    font-size: 1.2rem;
+    padding: 0.5rem 1rem;
+    margin-bottom: 1rem;
+    width: 100%;
+    max-width: 600px;
+    /* Adjust this value according to your preference */
+    height: 6rem;
+    /* Adjust this value according to your preference */
+    resize: none;
+    overflow-y: auto;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
+
+#submit-caption {
+    font-size: 1.2rem;
+    color: #ffffff;
+    background-color: #2c3e50;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: 0.3s;
+}
+
+/* Taking Votes Slide */
+#takeVote {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 650px;
+    margin: 60px 0 0 0;
+}
+
+@media (max-width: 768px) {
+    #vote-random-pic {
+        max-height: 40vh;
+        /* Adjust this value according to your preference */
+    }
+}
+
+/* Desktop view */
+@media (min-width: 769px) {
+    #vote-random-pic {
+        max-height: 25vh;
+        /* Adjust this value according to your preference */
+    }
+}
+
+.caption-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 1rem;
+    width: 100%;
+    height: 48vh; /* Set a fixed height, adjust based on your requirements */
+    padding: 1rem;
+    box-sizing: border-box;
+    overflow-y: auto; /* Show a vertical scrollbar when the content overflows */
+    /* Scrollbar styling */
+    scrollbar-color: #2c3e50 #F5F5F5;
+    scrollbar-width: 5px;
+}
+
+.caption-list::-webkit-scrollbar {
+    width: 5px;
+    background-color: #f7ebcc;
+}
+
+.caption-list::-webkit-scrollbar-thumb {
+    background-color: #f1dca7;
+    border-radius: 5px;
+}
+
+.caption-list::-webkit-scrollbar-track {
+    background-color: #F5F5F5;
+    border-radius: 5px;
+}
+
+.caption {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f0e9d7;
+    padding: 1rem;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.caption-text {
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+    text-align: center;
+}
+
+.vote-button {
+    font-size: 1rem;
+    color: #ffffff;
+    background-color: #2c3e50;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: 0.3s;
+}
+
+.vote-button:hover {
+    background-color: #34495e;
 }
 
 /* Chat Section */
@@ -303,4 +489,12 @@ h3 {
         bottom: 0;
         border-radius: 0;
     }
+
+    .collapsed-arrow {
+        top: 90%;
+    }
+}
+
+.no-display {
+    display: none !important;
 }
